--- a/css/style.css
+++ b/css/style.css
@@ -1144,6 +1144,9 @@ footer .border-top {
   filter: brightness(0) invert(1);
 }
 
+.itemDetails {
+  padding: 40px 0;
+}
 .itemDetails .itemDetailsSlider {
   display: flex;
   flex-direction: column;
@@ -1307,6 +1310,7 @@ footer .border-top {
   padding: 8px 12px;
   border-radius: 100px;
   height: 42px;
+  font-weight: bold;
 }
 .itemDetails .category img {
   width: 24px;
@@ -1331,8 +1335,11 @@ footer .border-top {
   padding-top: 12px;
   margin-top: 8px;
   border-top: 1px solid var(--lightBorderColor);
+  gap: 8px;
+  flex-wrap: wrap;
 }
 .itemDetails .itemBottom .location,
+.itemDetails .itemBottom .views,
 .itemDetails .itemBottom .time {
   display: flex;
   align-items: center;
@@ -1341,9 +1348,13 @@ footer .border-top {
   color: var(--grayColor);
 }
 .itemDetails .itemBottom .location img,
+.itemDetails .itemBottom .views img,
 .itemDetails .itemBottom .time img {
   width: 16px;
   height: 16px;
+}
+.itemDetails .itemBottom .location {
+  flex: 1;
 }
 .itemDetails .itemInfo {
   display: flex;
@@ -1357,6 +1368,7 @@ footer .border-top {
 }
 .itemDetails .itemInfo .description {
   color: var(--grayColor);
+  padding: 8px 0;
 }
 .itemDetails .instructions {
   display: flex;
@@ -1372,4 +1384,137 @@ footer .border-top {
   color: var(--whiteColor);
   padding: 8px 16px;
   border-radius: 100px;
+}
+.itemDetails .itemDetailsBox {
+  padding: 24px;
+  border: 1px solid var(--lightBorderColor);
+  border-radius: 16px;
+}
+@media screen and (max-width: 768px) {
+  .itemDetails .itemDetailsBox {
+    padding: 16px;
+  }
+  .itemDetails .itemDetailsBox .title {
+    padding: 8px;
+  }
+  .itemDetails .itemDetailsBox ul {
+    padding: 0 12px;
+  }
+}
+.itemDetails .itemDetailsBox .title {
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 16px;
+  padding-bottom: 16px;
+  border-bottom: 1px solid var(--lightBorderColor);
+}
+.itemDetails .itemDetailsBox ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.itemDetails .itemDetailsBox ul li {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 16px;
+  border-radius: 16px;
+  gap: 8px;
+}
+.itemDetails .itemDetailsBox ul li span {
+  flex: 1;
+}
+.itemDetails .itemDetailsBox ul li p {
+  flex: 3;
+  font-weight: bold;
+}
+.itemDetails .itemDetailsBox ul li:nth-child(2n) {
+  background-color: #f5f5f5;
+}
+.itemDetails .itemDetailsBox .features {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+.itemDetails .itemDetailsBox .features span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border: 1px solid var(--darkColor);
+  padding: 8px 16px;
+  border-radius: 100px;
+}
+.itemDetails .advertiserDetails {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  box-shadow: var(--BigShadow);
+  border-radius: 16px;
+  padding: 24px;
+  text-align: center;
+  background-color: var(--whiteColor);
+  margin-bottom: 24px;
+  background-image: url(../img/imgStatus.svg);
+  background-position: top right;
+  background-repeat: no-repeat;
+  background-size: 150px;
+}
+.itemDetails .advertiserDetails .advertiser {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+.itemDetails .advertiserDetails .advertiser img {
+  width: 120px;
+  height: 120px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 100px;
+  transition: var(--transition);
+}
+.itemDetails .advertiserDetails .advertiser h3 {
+  font-weight: bold;
+  transition: var(--transition);
+  text-transform: capitalize;
+}
+.itemDetails .advertiserDetails .advertiser:hover .name {
+  color: var(--mainColor);
+}
+.itemDetails .advertiserDetails .date {
+  color: var(--grayColor);
+  font-size: 13px;
+}
+.itemDetails .advertiserDetails .contact {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 8px;
+}
+.itemDetails .advertiserDetails .contact a {
+  flex: 1;
+  padding: 12px 16px;
+  border-radius: 16px;
+  gap: 8px;
+  background-color: var(--mainColor);
+  color: var(--whiteColor);
+  text-transform: capitalize;
+  font-size: 16px;
+}
+.itemDetails .advertiserDetails .contact a img {
+  width: 20px;
+  height: 20px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  filter: brightness(0) invert(1);
+}
+.itemDetails .advertiserDetails .contact a.call {
+  background-color: #2562d3;
+}
+.itemDetails .safety {
+  width: 90%;
+  margin: auto;
+}
+.itemDetails .safety .title {
+  color: var(--mainColor);
 }/*# sourceMappingURL=style.css.map */
