--- a/css/style.css
+++ b/css/style.css
@@ -1389,6 +1389,7 @@ footer .border-top {
   padding: 24px;
   border: 1px solid var(--lightBorderColor);
   border-radius: 16px;
+  background-color: var(--whiteColor);
 }
 @media screen and (max-width: 768px) {
   .itemDetails .itemDetailsBox {
@@ -1453,7 +1454,7 @@ footer .border-top {
   padding: 24px;
   text-align: center;
   background-color: var(--whiteColor);
-  margin-bottom: 24px;
+  margin-bottom: 32px;
   background-image: url(../img/imgStatus.svg);
   background-position: top right;
   background-repeat: no-repeat;
@@ -1510,11 +1511,4 @@ footer .border-top {
 }
 .itemDetails .advertiserDetails .contact a.call {
   background-color: #2562d3;
-}
-.itemDetails .safety {
-  width: 90%;
-  margin: auto;
-}
-.itemDetails .safety .title {
-  color: var(--mainColor);
 }/*# sourceMappingURL=style.css.map */
