--- a/css/style.scss
+++ b/css/style.scss
@@ -1106,7 +1106,7 @@ footer {
   }
 }
 .itemDetails {
-  padding: 40px 0;
+  padding-bottom: 40px ;
   .itemDetailsSlider {
     display: flex;
     flex-direction: column;
@@ -1470,6 +1470,64 @@ footer {
           background-color: #2562d3;
         }
       }
+    }
+  }
+}
+
+
+.banner {
+  // background-image: url(../img/s.jpg) !important;
+  background-color: #f5f5f5;
+  // background-size: cover;
+  // background-attachment: fixed;
+  // background-position: bottom;
+  padding: 20px 0 ;
+  position: relative;
+  display: flex;
+  isolation: isolate;
+
+  // &::before {
+  //   content: "";
+  //   width: 100%;
+  //   height: 100%;
+  //   position: absolute;
+  //   left: 0;
+  //   top: 0;
+  //   background: linear-gradient(#ffffff38, #ffffff);
+  //   z-index: -1;
+  // }
+  .links {
+    margin-bottom: 4px;
+    a {
+      padding: 4px;
+      position: relative;
+      color: var(--mainColor);
+      display: inline-flex;
+      align-items: center;
+      gap: 12px;
+      text-transform: capitalize;
+      &:last-child {
+        &::after {
+          display: none;
+        }
+      }
+      &::after {
+        content: " ↣ ";
+        // transform: scaleX(-1);
+      }
+      &.active {
+        cursor: default;
+        color: #777;
+      }
+    }
+  }
+  h2 {
+    font-weight: bold;
+    padding: 4px;
+    color: var(--mainColor);
+    text-transform: capitalize;
+    @media (max-width: 768px) {
+      font-size: 20px;
     }
   }
 }
