--- a/css/style.scss
+++ b/css/style.scss
@@ -827,6 +827,19 @@ footer {
     }
   }
 }
+.viewAll{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: var(--mainColor);
+  font-weight: bold;
+  text-transform: capitalize;
+  img{
+    width: 16px;
+    height: 16px;
+    transform: scaleX(-1);
+  }
+}
 .categories {
   padding: 40px 0;
   .row {
@@ -1106,7 +1119,7 @@ footer {
   }
 }
 .itemDetails {
-  padding-bottom: 40px ;
+  padding-bottom: 40px;
   .itemDetailsSlider {
     display: flex;
     flex-direction: column;
@@ -1400,7 +1413,6 @@ footer {
       }
     }
   }
-
   .advertiserDetails {
     display: flex;
     flex-direction: column;
@@ -1418,7 +1430,6 @@ footer {
     // position: sticky;
     // top: 120px ;
     // z-index: 2;
-
     .advertiser {
       display: flex;
       flex-direction: column;
@@ -1473,19 +1484,16 @@ footer {
     }
   }
 }
-
-
 .banner {
   // background-image: url(../img/s.jpg) !important;
   background-color: #f5f5f5;
   // background-size: cover;
   // background-attachment: fixed;
   // background-position: bottom;
-  padding: 20px 0 ;
+  padding: 20px 0;
   position: relative;
   display: flex;
   isolation: isolate;
-
   // &::before {
   //   content: "";
   //   width: 100%;
