--- a/css/style.css
+++ b/css/style.css
@@ -1567,4 +1567,124 @@ footer .border-top {
   .banner h2 {
     font-size: 20px;
   }
+}
+
+.explore {
+  padding: 40px 0;
+}
+.explore .sortBy {
+  cursor: pointer;
+  display: none;
+  align-items: center;
+  gap: 8px;
+  font-weight: bold;
+}
+.explore .sortBy img {
+  width: 16px;
+  height: 16px;
+}
+@media screen and (max-width: 768px) {
+  .explore .sortBy {
+    display: flex;
+  }
+}
+.explore .closeFilter {
+  display: none;
+  align-self: flex-end;
+  width: 32px;
+  height: 32px;
+  border-radius: 100px;
+  justify-content: center;
+  align-items: center;
+  border: 1.5px solid var(--darkColor);
+  transition: var(--transition);
+}
+.explore .closeFilter img {
+  width: 12px;
+  height: 12px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  transition: var(--transition);
+}
+.explore .closeFilter:hover {
+  background: var(--darkColor);
+}
+.explore .closeFilter:hover img {
+  filter: brightness(0) invert(1);
+}
+@media screen and (max-width: 768px) {
+  .explore .closeFilter {
+    display: flex;
+  }
+}
+@media screen and (max-width: 768px) {
+  .explore .filter {
+    padding: 32px 16px !important;
+    position: fixed;
+    top: 0px;
+    left: -100%;
+    z-index: 9999;
+    background: var(--whiteColor);
+    display: flex;
+    gap: 16px;
+    flex-direction: column;
+    height: calc(100dvh - 0px);
+    width: 100dvw;
+    transition: var(--transition);
+  }
+}
+.explore .filter.active {
+  left: 0;
+}
+.explore .asideFilter .accordion-body {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.explore .asideFilter .option {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  flex: 1;
+  padding: 4px;
+}
+.explore .asideFilter .option img {
+  width: 24px;
+  height: 24px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.explore .asideFilter .option label {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.explore .asideFilter .option input {
+  height: 16px;
+  width: 16px;
+  transition: var(--transition);
+}
+.explore .asideFilter .option * {
+  cursor: pointer;
+}
+
+.accordion-button {
+  transition: var(--transition);
+}
+.accordion-button:not(.collapsed) {
+  background-color: var(--mainColor);
+  box-shadow: none;
+  color: var(--whiteColor);
+}
+.accordion-button:not(.collapsed)::after {
+  filter: brightness(0) invert(1);
+}
+.accordion-button:focus {
+  box-shadow: none;
+}
+.accordion-button::after {
+  width: 12px;
+  height: 12px;
+  background-position: center;
 }/*# sourceMappingURL=style.css.map */
