--- a/css/style.scss
+++ b/css/style.scss
@@ -1693,3 +1693,221 @@ footer {
   justify-content: center;
   margin: 20px 0;
 }
+.map {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.contact_section {
+  padding:  40px;
+  form {
+    background: #fff;
+    box-shadow: 0px 4px 24px #0000001a;
+    padding: 42px 12px;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+    @media (max-width: 576px) {
+      padding: 32px 0;
+    }
+    .form-group {
+      display: flex;
+      width: 100%;
+      @media (max-width: 768px) {
+        flex-direction: column;
+        gap: 48px;
+      }
+      .inputfield {
+        width: 100%;
+        padding: 0 16px;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        label {
+          position: absolute;
+          font-size: 14px;
+          color: var(--grayColor);
+          left: 16px;
+          transform: translateY(-50%);
+          top: 50%;
+          font-weight: 500;
+          transition: var(--transition);
+          i {
+            margin-right: 4px;
+          }
+          cursor: auto;
+          &.message-label {
+            top: 20%;
+          }
+          &.h {
+            top: -4px;
+            color: var(--mainColor);
+          }
+        }
+        input,
+        textarea {
+          width: 100%;
+          height: 45px;
+          border: none;
+          outline: none;
+          background: none;
+          &:focus + span::after {
+            width: calc(100% - 32px);
+          }
+        }
+        textarea {
+          padding: 16px 0;
+          height: 130px;
+        }
+        .highlight {
+          width: 100%;
+          height: 2px;
+          background: #eeeeee;
+          &::after {
+            content: "";
+            width: 0;
+            transition: var(--transition);
+            left: 50%;
+            height: 2px;
+            background: var(--mainColor);
+            position: absolute;
+            transform: translate(-50%);
+          }
+        }
+      }
+    }
+  }
+  .contact_info {
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
+    padding: 24px;
+    background: #fff;
+    box-shadow: 0px 4px 24px #0000001a;
+    h3 {
+      font-size: 22px;
+      color: var(--darkColor);
+      font-weight: bold;
+      margin-bottom: 40px;
+    }
+    ul {
+      padding: 0;
+      margin: 0;
+    }
+    h5 {
+      font-size: 22px;
+      color: var(--mainColor);
+      font-weight: 600;
+      margin-bottom: 8px;
+    }
+    p {
+      color: var(--grayColor);
+      font-size: 15px;
+    }
+    .field {
+      width: 100%;
+      display: flex;
+      margin-bottom: 32px;
+      gap: 16px;
+      align-items: center;
+      .icon {
+        min-width: 48px;
+        height: 48px;
+        border-radius: 50%;
+        border: 1px solid var(--mainColor);
+        overflow: hidden;
+        isolation: isolate;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        &::after {
+          content: "";
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          opacity: 0;
+          z-index: 0;
+          transition: var(--transition);
+          background: var(--mainColor);
+        }
+        path,
+        svg {
+          width: 20px;
+          height: 20px;
+          fill: var(--mainColor);
+        }
+      }
+      .text {
+        display: flex;
+        flex-direction: column;
+        h4 {
+          margin-bottom: 4px;
+          color: var(--mainColor);
+          font-size: 13px;
+          font-weight: bold;
+        }
+        a {
+          color: var(--grayColor);
+        }
+      }
+      &:hover {
+        .text a {
+          color: var(--mainColor);
+        }
+        .icon {
+          border-color: transparent;
+          path,
+          svg {
+            fill: var(--whiteColor);
+            z-index: 2;
+          }
+          &::after {
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
+}
+.customBtn {
+  border: none;
+  outline: none;
+  background: none;
+  isolation: isolate;
+  padding: 12px 16px;
+  width: 160px;
+  margin: auto;
+  border: 1px solid var(--mainColor);
+  color: var(--mainColor);
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  transition: var(--transition);
+  &::after {
+    position: absolute;
+    content: "";
+    height: 1000px;
+    width: 0;
+    right: 50%;
+    transition: var(--transition);
+    background: var(--mainColor);
+    transform: rotate(-25deg);
+    z-index: -1;
+  }
+  &:hover {
+    color: #fff;
+    border-color: var(--mainColor);
+    &::after {
+      width: 110%;
+      right: -10px;
+    }
+  }
+}
