--- a/css/style.css
+++ b/css/style.css
@@ -1951,4 +1951,150 @@ footer .border-top {
 .customBtn:hover::after {
   width: 110%;
   right: -10px;
+}
+
+.accountForm {
+  padding: 40px 0;
+}
+
+.cardForm {
+  isolation: isolate;
+  padding: 30px;
+  border-radius: 14px;
+  box-shadow: var(--BigShadow);
+  border: none;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+@media (max-width: 768px) {
+  .cardForm {
+    padding: 30px 10px;
+  }
+}
+.cardForm #mapView {
+  height: 250px;
+  border-radius: 16px;
+  overflow: hidden;
+}
+.cardForm .loginImg {
+  width: 100%;
+  max-height: 200px;
+  aspect-ratio: 1;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media (max-width: 768px) {
+  .cardForm .loginImg {
+    padding: 0 30px;
+  }
+}
+.cardForm .formGroup {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.cardForm .formGroup label {
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.cardForm .formGroup label img {
+  width: 20px;
+  height: 20px;
+}
+.cardForm .formGroup .inputDiv {
+  position: relative;
+  border: 1px solid var(--lightGrayColor);
+  padding: 0px 16px;
+  border-radius: 12px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.cardForm .formGroup .inputDiv input {
+  width: 100%;
+  border: none;
+  background: none;
+  height: 24px;
+  min-width: 40px;
+}
+.cardForm .formGroup .inputDiv span {
+  font-weight: bold;
+  color: var(--mainColor);
+}
+.cardForm .formGroup .inputDiv.ltr * {
+  text-align: start;
+  direction: ltr;
+}
+.cardForm .formLabel {
+  text-align: center;
+}
+.cardForm .formLabel span {
+  color: var(--mainColor);
+  font-weight: bold;
+}
+.cardForm .form-control {
+  border-radius: 12px;
+}
+
+.otp {
+  direction: ltr;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 4px;
+}
+.otp .otp-input {
+  min-width: 40px;
+  flex: 1;
+  height: 64px;
+  background-color: #eee;
+  border: none;
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 8px;
+}
+
+.profileImage {
+  position: relative;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.profileImage .profileImageLabel {
+  display: block;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+.profileImage .profileImageLabel img {
+  display: block;
+  width: 150px;
+  aspect-ratio: 1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 100%;
+  background-color: #f1f1f1;
+  border: 1px solid #f1f1f1;
+}
+.profileImage span {
+  position: absolute;
+  bottom: 4px;
+  left: 12px;
+  background-color: var(--whiteColor);
+  border-radius: 100%;
+}
+.profileImage span img {
+  width: 32px;
+  height: 32px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.profileImage #profileImageInput {
+  display: none;
 }/*# sourceMappingURL=style.css.map */
