--- a/css/style.scss
+++ b/css/style.scss
@@ -1911,3 +1911,141 @@ footer {
     }
   }
 }
+
+.accountForm{
+  padding: 40px 0;
+}
+
+
+.cardForm {
+  isolation: isolate;
+  padding: 30px;
+  border-radius: 14px;
+  box-shadow: var(--BigShadow);
+  border: none;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  @media (max-width: 768px) {
+    padding: 30px 10px;
+  }
+  #mapView{
+    height: 250px;
+    border-radius: 16px;
+    overflow: hidden;
+  }
+  .loginImg {
+    width: 100%;
+    max-height: 200px;
+    aspect-ratio: 1;
+    object-fit: contain;
+    @media (max-width: 768px) {
+      padding: 0 30px;
+    }
+  }
+  .formGroup {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    label {
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      img {
+        width: 20px;
+        height: 20px;
+      }
+    }
+    .inputDiv {
+      position: relative;
+      border: 1px solid var(--lightGrayColor);
+      padding: 0px 16px;
+      border-radius: 12px;
+      flex: 1;
+      display: flex;
+      align-items: center;
+      gap: 4px;
+      input {
+        width: 100%;
+        border: none;
+        background: none;
+        height: 24px;
+        min-width: 40px;
+      }
+      span {
+        font-weight: bold;
+        color: var(--mainColor);
+      }
+      &.ltr * {
+        text-align: start;
+        direction: ltr;
+      }
+    }
+  }
+  .formLabel {
+    text-align: center;
+    span {
+      color: var(--mainColor);
+      font-weight: bold;
+    }
+  }
+  .form-control {
+    border-radius: 12px;
+  }
+}
+.otp {
+  direction: ltr;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 4px;
+  .otp-input {
+    min-width: 40px;
+    flex: 1;
+    height: 64px;
+    background-color: #eee;
+    border: none;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 8px;
+  }
+}
+.profileImage {
+  position: relative;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .profileImageLabel {
+    display: block;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    img {
+      display: block;
+      width: 150px;
+      aspect-ratio: 1;
+      object-fit: cover;
+      border-radius: 100%;
+      background-color: #f1f1f1;
+      border: 1px solid #f1f1f1;
+    }
+  }
+  span {
+    position: absolute;
+    bottom: 4px;
+    left: 12px;
+    background-color: var(--whiteColor);
+    border-radius: 100%;
+    img {
+      width: 32px;
+      height: 32px;
+      object-fit: contain;
+    }
+  }
+  #profileImageInput {
+    display: none;
+  }
+}
